--- a/domain.yaml
+++ b/domain.yaml
@@ -25,8 +25,8 @@ answers:
     Pets are welcome! We have a dog playground that our guests are welcome to
     enjoy.
   - >-
-    If you're interested in food delivery, make an order on our website or give
-    us a call at (412) 232-9800.
+    If you're interested in food delivery, submit an order on our website or
+    give us a call at (412) 232-9800.
   - >-
     To get to Death Star, take exit 45 on I-95 and then take the third turn
     left. The restaurant will be on your right.
