--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,10 @@
 openai:
+  # Default: GPT-3.5 with the text completion API
   model: text-davinci-003
   endpoint: completions
-  # Use the below for the new gpt-3.5-turbo model with the chat completion API.
+  # ChatGPT
   # model: gpt-3.5-turbo
+  # endpoint: chat
+  # GPT-4
+  # model: gpt-4
   # endpoint: chat
